Resolve z-index conflict between ModalAddCard and custom checkbox from TaskCard

--- a/src/app/components/modal-add-card/modal-add-card.component.css
+++ b/src/app/components/modal-add-card/modal-add-card.component.css
@@ -8,6 +8,7 @@
   justify-content: center;
   align-items: center;
   background-color: rgba(0, 0, 0, 0.5);
+  z-index: 999;
 }
 
 .modal-container {
@@ -20,7 +21,7 @@
   border-radius: var(--border-radius);
   border: 1px solid var(--border-element);
   background-color: var(--bg-element);
-  z-index: 100;
+  z-index: 1000;
 }
 
 .modal-title-input {
